err/metlog-raven.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/metlog'...
Compiling './lib/python3.5/site-packages/metlog/client.py'...
***   File "./lib/python3.5/site-packages/metlog/client.py", line 191
    except StandardError, e:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/metlog/decorators'...
Listing './lib/python3.5/site-packages/metlog/senders'...
Listing './lib/python3.5/site-packages/metlog/tests'...
Compiling './lib/python3.5/site-packages/metlog/tests/sync_publisher.py'...
***   File "./lib/python3.5/site-packages/metlog/tests/sync_publisher.py", line 66
    except ZeroMQError, err:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/metlog/tests/sync_subscriber.py'...
***   File "./lib/python3.5/site-packages/metlog/tests/sync_subscriber.py", line 42
    print 'Received %d updates' % nbr
                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/metlog_py-0.10.0.egg-info'...
Listing './lib/python3.5/site-packages/metlog_raven'...
Listing './lib/python3.5/site-packages/metlog_raven-0.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/raven'...
Compiling './lib/python3.5/site-packages/raven/__init__.py'...
***   File "./lib/python3.5/site-packages/raven/__init__.py", line 14
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/raven/base.py'...
***   File "./lib/python3.5/site-packages/raven/base.py", line 491
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/raven/conf'...
Listing './lib/python3.5/site-packages/raven/contrib'...
Listing './lib/python3.5/site-packages/raven/contrib/celery'...
Listing './lib/python3.5/site-packages/raven/contrib/django'...
Listing './lib/python3.5/site-packages/raven/contrib/django/celery'...
Compiling './lib/python3.5/site-packages/raven/contrib/django/client.py'...
***   File "./lib/python3.5/site-packages/raven/contrib/django/client.py", line 158
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/raven/contrib/django/middleware'...
Compiling './lib/python3.5/site-packages/raven/contrib/django/models.py'...
***   File "./lib/python3.5/site-packages/raven/contrib/django/models.py", line 155
    except Exception, exc:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/middleware'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/templatetags'...
Listing './lib/python3.5/site-packages/raven/contrib/django/templatetags'...
Listing './lib/python3.5/site-packages/raven/contrib/flask'...
Listing './lib/python3.5/site-packages/raven/contrib/pylons'...
Listing './lib/python3.5/site-packages/raven/contrib/tornado'...
Compiling './lib/python3.5/site-packages/raven/contrib/tornado/__init__.py'...
***   File "./lib/python3.5/site-packages/raven/contrib/tornado/__init__.py", line 87
    except HTTPError, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/raven/contrib/transports'...
Listing './lib/python3.5/site-packages/raven/contrib/transports/zeromq'...
Compiling './lib/python3.5/site-packages/raven/contrib/transports/zeromq/sample_server.py'...
***   File "./lib/python3.5/site-packages/raven/contrib/transports/zeromq/sample_server.py", line 15
    print jdata
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/raven/contrib/zerorpc'...
Listing './lib/python3.5/site-packages/raven/contrib/zope'...
Compiling './lib/python3.5/site-packages/raven/events.py'...
***   File "./lib/python3.5/site-packages/raven/events.py", line 83
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/raven/handlers'...
Listing './lib/python3.5/site-packages/raven/scripts'...
Compiling './lib/python3.5/site-packages/raven/scripts/runner.py'...
***   File "./lib/python3.5/site-packages/raven/scripts/runner.py", line 25
    print "Invalid JSON was used for option %s.  Received: %s" % (opt_str, value)
                                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/raven/transport'...
Compiling './lib/python3.5/site-packages/raven/transport/base.py'...
***   File "./lib/python3.5/site-packages/raven/transport/base.py", line 307
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/raven/transport/threaded.py'...
***   File "./lib/python3.5/site-packages/raven/transport/threaded.py", line 39
    print "Sentry is attempting to send %s pending error messages" % size
                                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/raven/utils'...
Compiling './lib/python3.5/site-packages/raven/utils/__init__.py'...
***   File "./lib/python3.5/site-packages/raven/utils/__init__.py", line 95
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/raven/utils/encoding.py'...
***   File "./lib/python3.5/site-packages/raven/utils/encoding.py", line 42
    except UnicodeDecodeError, e:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/raven/utils/serializer'...
Compiling './lib/python3.5/site-packages/raven/utils/serializer/base.py'...
***   File "./lib/python3.5/site-packages/raven/utils/serializer/base.py", line 53
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/raven/utils/serializer/manager.py'...
***   File "./lib/python3.5/site-packages/raven/utils/serializer/manager.py", line 67
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/raven-3.1.16.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
